--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -1568,30 +1568,50 @@ Elements</string>
               <item>
                <layout class="QHBoxLayout" name="lay_nonlinear_parameters_row2">
                 <item>
-                 <widget class="QGroupBox" name="groupBox_4">
+                 <widget class="QGroupBox" name="gbx_material_regularization">
                   <property name="title">
-                   <string>GroupBox</string>
+                   <string>Material Regularization</string>
+                  </property>
+                  <layout class="QGridLayout" name="gridLayout_33">
+                   <item row="0" column="0">
+                    <layout class="QFormLayout" name="frm_material_reguralization">
+                     <item row="0" column="0">
+                      <widget class="QCheckBox" name="chk_material_reguralization_concrete_concrete">
+                       <property name="text">
+                        <string>Concrete</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QCheckBox" name="chk_material_reguralization_concrete_steel">
+                       <property name="text">
+                        <string>Steel</string>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QGroupBox" name="gbx_shear_model_wall">
+                  <property name="title">
+                   <string>Shear model wall</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QGroupBox" name="groupBox_3">
+                 <widget class="QGroupBox" name="gbx_steel_model">
                   <property name="title">
-                   <string>GroupBox</string>
+                   <string>Steel model</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QGroupBox" name="groupBox_2">
+                 <widget class="QGroupBox" name="gbx_element_model_wall">
                   <property name="title">
-                   <string>GroupBox</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QGroupBox" name="groupBox">
-                  <property name="title">
-                   <string>GroupBox</string>
+                   <string>Element model wall</string>
                   </property>
                  </widget>
                 </item>
