Variable names and texts for Shear model wall

--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -1599,6 +1599,26 @@ Elements</string>
                   <property name="title">
                    <string>Shear model wall</string>
                   </property>
+                  <layout class="QGridLayout" name="gridLayout_34">
+                   <item row="0" column="0">
+                    <layout class="QFormLayout" name="frm_shear_model_wall">
+                     <item row="0" column="0">
+                      <widget class="QRadioButton" name="rbn_shear_model_wall_linear">
+                       <property name="text">
+                        <string>Linear</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QRadioButton" name="rbn_shear_model_wall_nonlinear">
+                       <property name="text">
+                        <string>Nonlinear</string>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </item>
+                  </layout>
                  </widget>
                 </item>
                 <item>
