--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -1714,10 +1714,46 @@ Elements</string>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QGroupBox" name="groupBox_3">
+                 <widget class="QGroupBox" name="gbx_infill_model_wall">
                   <property name="title">
-                   <string>GroupBox</string>
+                   <string>Infill model wall</string>
                   </property>
+                  <layout class="QGridLayout" name="gridLayout_38">
+                   <item row="0" column="0">
+                    <layout class="QFormLayout" name="frm_infill_model_wall">
+                     <item row="0" column="0">
+                      <widget class="QLabel" name="lbl_infill_model_wall_beams">
+                       <property name="text">
+                        <string>Beams:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="1">
+                      <widget class="QDoubleSpinBox" name="spx_infill_model_wall_beams"/>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QLabel" name="lbl_infill_model_wall_columns">
+                       <property name="text">
+                        <string>Columns:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QDoubleSpinBox" name="spx_infill_model_wall_columns"/>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QLabel" name="lbl_infill_model_wall_walls">
+                       <property name="text">
+                        <string>Walls:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="1">
+                      <widget class="QDoubleSpinBox" name="spx_infill_model_wall_walls"/>
+                     </item>
+                    </layout>
+                   </item>
+                  </layout>
                  </widget>
                 </item>
                 <item>
